[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/LevelDistance.gd" type="Script" id=1]
[ext_resource path="res://assets/Quantico/Quantico-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 252 )

[node name="LevelDistance" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 247.5, 230.5 )
scale = Vector2( 24.75, 16.85 )

[node name="lblNumber" type="Label" parent="."]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 220.0
margin_top = 183.0
margin_right = 260.0
margin_bottom = 221.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0.67451, 0.65098, 0.588235, 1 )
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1

[node name="PlayerCollider" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollider"]
position = Vector2( 241, 238 )
scale = Vector2( 2, 1 )
shape = SubResource( 3 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="PlayerCollider" to="." method="_on_PlayerCollider_body_entered"]
